--- a/FredsWorkmate/Pages/Shared/_Layout.cshtml.css
+++ b/FredsWorkmate/Pages/Shared/_Layout.cshtml.css
@@ -1,48 +1,40 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+body main {
+    grid-column: 2;
+    overflow-y: scroll;
 }
 
-a {
-  color: #0077cc;
+body nav {
+    grid-column: 1;
+    background-color: #d5d5d5;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+ul.nav {
+    margin: 0;
+    padding: 0;
+    padding-top: 5px;
+    list-style-type: none;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    ul.nav li {
+        padding: 5px 10px;
+    }
+
+table {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
+    table td, th {
+        border: 1px solid black;
+    }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+body footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
 }
