--- a/FredsWorkmate/wwwroot/css/site.css
+++ b/FredsWorkmate/wwwroot/css/site.css
@@ -1,22 +1,14 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  margin-bottom: 60px;
+    display: grid;
+    grid-column-gap: 5px;
+    grid-template-columns: 200px auto;
+    width: 100%;
+    height: 100%;
 }
