lots of database migrations, to strings for entitys, creation page for invoice, other internal changes

--- a/FredsWorkmate/Pages/Address/Details.cshtml
+++ b/FredsWorkmate/Pages/Address/Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@page "{id}"
 @using FredsWorkmate.Database.Models
-@using FredsWorkmate.Util
+@using FredsWorkmate.Util.HtmlHelperExtensions
 @model AddressDetails
 @{
     ViewData["Title"] = "Details Of Address";
     Html.EntityDetails<Address>(Model.Entity);
-    Html.DetailNavigation(Model.Entity.Id);
+    Html.DetailsNavigation(Model.Entity.Id);
 }
