--- a/FredsWorkmate/Pages/Project/Index.cshtml
+++ b/FredsWorkmate/Pages/Project/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using FredsWorkmate.Database.Models
-@using FredsWorkmate.Util
+@using FredsWorkmate.Util.HtmlHelperExtensions
 @model ProjectIndex
 @{
     ViewData["Title"] = "Projects";
