--- a/FredsWorkmate/Pages/BankInformation/Edit.cshtml
+++ b/FredsWorkmate/Pages/BankInformation/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "{id}"
 @using FredsWorkmate.Database.Models
-@using FredsWorkmate.Util
+@using FredsWorkmate.Util.HtmlHelperExtensions
 @model BankInformationEdit
 @{
     ViewData["Title"] = "Edit BankInformation";
