--- a/FredsWorkmate/Pages/CompanyInformation/Details.cshtml
+++ b/FredsWorkmate/Pages/CompanyInformation/Details.cshtml
@@ -1,9 +1,9 @@
 ﻿@page "{id}"
 @using FredsWorkmate.Database.Models
-@using FredsWorkmate.Util
+@using FredsWorkmate.Util.HtmlHelperExtensions
 @model CompanyInformationDetails
 @{
     ViewData["Title"] = "Details Of CompanyInformation";
     Html.EntityDetails<CompanyInformation>(Model.Entity);
-    Html.DetailNavigation(Model.Entity.Id);
+    Html.DetailsNavigation(Model.Entity.Id);
 }
