--- a/FredsWorkmate/Pages/Invoice/Details.cshtml
+++ b/FredsWorkmate/Pages/Invoice/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@page "{id}"
 @using FredsWorkmate.Database.Models
-@using FredsWorkmate.Util
+@using FredsWorkmate.Util.HtmlHelperExtensions
 @model InvoiceDetails
 @{
     ViewData["Title"] = "Details Of Invoice";
     Html.EntityDetails<Invoice>(Model.Entity);
+    <h3>Positions:</h3>
+    Html.EntityTable<InvoicePosition>(Model.db.InvoicePositions.Where(x => x.Invoice == Model.Entity));
+    Html.DetailsNavigation(Model.Entity.Id);
 }
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Entity.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
-</div>
