jesus christ this database stuff is killing me

--- a/FredsWorkmate/Pages/Invoice/Index.cshtml
+++ b/FredsWorkmate/Pages/Invoice/Index.cshtml
@@ -4,6 +4,6 @@
 @model InvoiceIndex
 @{
     ViewData["Title"] = "Invoices";
-    Html.EntityCreationForm<Invoice>();
+    <a href="/Invoice/Create">Create New Invoice</a>
     Html.EntityTable<Invoice>(Model.db.Invoices);
 }
