--- a/FredsWorkmate/Pages/Invoice/Create.cshtml
+++ b/FredsWorkmate/Pages/Invoice/Create.cshtml
@@ -19,6 +19,11 @@
             <input type="text" name="Buyer.ContactName" placeholder="Buyer Contact Name" />
             <input type="text" name="Buyer.CompanyName" placeholder="Buyer Company Name" />
             <input type="text" name="Buyer.Email" placeholder="Buyer Email" />
+            <input type="text" name="Buyer.Street" placeholder="Buyer Street" />
+            <input type="text" name="Buyer.HouseNumber" placeholder="Buyer House Number" />
+            <input type="text" name="Buyer.PostalCode" placeholder="Buyer Postal Code" />
+            <input type="text" name="Buyer.City" placeholder="Buyer City" />
+            <input type="text" name="Buyer.Country" placeholder="Buyer Country" />
             <input type="number" name="Buyer.VATRate" placeholder="Buyer VAT Rate" value="0.19" min="0" max="1" step="0.01" />
         </dd>
         <dt>Seller</dt>
@@ -36,6 +41,8 @@
             <input type="text" name="Seller.BankName" placeholder="Seller Bank Name" />
             <input type="text" name="Seller.BankIBAN" placeholder="Seller Bank IBAN" />
             <input type="text" name="Seller.BankBIC_Swift" placeholder="Seller Bank BIC/Swift" />
+            <input type="text" name="Seller.FC" placeholder="Seller FC" />
+            <input type="text" name="Seller.VA" placeholder="Seller VA" />
         </dd>
         <dt>Positions</dt>
         @for (int i = 0; i < 3; i++)
