now with erechnung xml embedded in the pdf. why on earth is there no c# lib that can do this for free?

--- a/FredsWorkmate/Pages/Invoice/Create.cshtml
+++ b/FredsWorkmate/Pages/Invoice/Create.cshtml
@@ -13,6 +13,8 @@
         <dd><input type="text" name="InvoiceNumber" value="@(Model.ProposedInvoiceNumber)" /></dd>
         <dt>Invoice Date</dt>
         <dd><input type="date" name="InvoiceDate" value="@(Model.CurrentDate)" /></dd>
+        <dt>Delivery Date</dt>
+        <dd><input type="date" name="DeliveryDate" value="@(Model.CurrentDate)" /></dd>
         <dt>Buyer</dt>
         <dd>
             @Html.DropDownList("Buyer", Model.db.Customers.Select(x => new SelectListItem(x.CompanyName, x.Id)), "BuyerLabel");
